<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/standard_layout1" >

    <LinearLayout
        style="@style/standard_layout1"
        android:baselineAligned="true"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout style="@style/mandi5_screen_header_bg" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:background="#B8B8B8"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/header_logo_shopo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/logo" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/standard_layout6"
            android:layout_weight="100" >

            <LinearLayout style="@style/mandi5_screen_innerbody_layout_style_mar_pad" >

                <ScrollView style="@style/mandi5_screen_scroll_style" >

                    <LinearLayout style="@style/layout_fill_wrap_vertical" >

                        <LinearLayout
                            style="@style/layout_fill_wrap"
                            android:paddingBottom="20dip" >

                            <TextView
                                android:id="@+id/create_account_id"
                                style="@style/mandi5_text_heading1"
                                android:layout_marginLeft="5dip"
                                android:text="@string/create_account" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" >

                                <RadioGroup
                                    android:id="@+id/radioType"
                                    style="@style/layout_fil_wrap_hori"
                                    android:paddingLeft="5dip"
                                    android:weightSum="8" >

                                    <RadioButton
                                        android:id="@+id/radio_buyer"
                                        style="@style/layout_wrap_wrap"
                                        android:layout_weight="1"
                                        android:button="@drawable/radio_button" />

                                    <TextView
                                        android:id="@+id/textView_employer"
                                        style="@style/standard_text_wrap_wrap_color"
                                        android:layout_weight="3"
                                        android:paddingRight="10dip"
                                        android:text="@string/register_as_buyer" />

                                    <RadioButton
                                        android:id="@+id/radio_seller"
                                        style="@style/layout_wrap_wrap"
                                        android:layout_weight="1"
                                        android:button="@drawable/radio_button"
                                        android:checked="true" />

                                    <TextView
                                        android:id="@+id/textView_emp"
                                        style="@style/standard_text_wrap_wrap_color"
                                        android:layout_weight="3"
                                        android:paddingRight="10dip"
                                        android:text="@string/register_as_seller" />
                                </RadioGroup>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/layout_fill_wrap"
                            android:layout_marginBottom="@dimen/standard_padding5"
                            android:layout_marginTop="5dip" >

                            <EditText
                                android:id="@+id/register_first_name"
                                style="@style/standard_edittext1"
                                android:hint="@string/first_name" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/layout_fill_wrap"
                            android:layout_marginBottom="@dimen/standard_padding5"
                            android:layout_marginTop="5dip" >

                            <EditText
                                android:id="@+id/register_last_name"
                                style="@style/standard_edittext1"
                                android:hint="@string/last_name" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/layout_fill_wrap"
                            android:layout_marginBottom="@dimen/standard_padding5"
                            android:layout_marginTop="5dip" >

                            <EditText
                                android:id="@+id/register_mobile"
                                style="@style/standard_edittext1"
                                android:hint="@string/mobile" />
                        </LinearLayout>

                        <LinearLayout style="@style/mandi5_screen_spinner_layout" >

                            <Spinner
                                android:id="@+id/mandi5_registration_category_spinner"
                                style="@style/mandi5_screen_spinner"
                                android:prompt="@string/please_select" >
                            </Spinner>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/layout_fill_wrap"
                            android:layout_marginBottom="@dimen/standard_padding5"
                            android:layout_marginTop="5dip" >

                            <EditText
                                android:id="@+id/register_email"
                                style="@style/standard_edittext1"
                                android:hint="@string/email" />
                        </LinearLayout>

                        <LinearLayout style="@style/mandi5_screen_spinner_layout" >

                            <Spinner
                                android:id="@+id/mandi5_registration_district_spinner"
                                style="@style/mandi5_screen_spinner"
                                android:prompt="@string/please_select" >
                            </Spinner>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/layout_fill_wrap"
                            android:layout_marginBottom="@dimen/standard_padding5"
                            android:layout_marginTop="5dip" >

                            <EditText
                                android:id="@+id/register_zip"
                                style="@style/standard_edittext1"
                                android:hint="@string/zip" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/layout_fill_wrap"
                            android:layout_marginBottom="@dimen/standard_padding5"
                            android:layout_marginTop="5dip" >

                            <EditText
                                android:id="@+id/register_password"
                                style="@style/standard_edittext1"
                                android:hint="@string/password" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/layout_fill_wrap"
                            android:layout_marginBottom="@dimen/standard_padding5"
                            android:layout_marginTop="5dip" >

                            <EditText
                                android:id="@+id/register_confirm_pass"
                                style="@style/standard_edittext1"
                                android:hint="@string/confirm_pass"
                                android:inputType="textPassword" />
                        </LinearLayout>

                        <LinearLayout style="@style/mandi5_screen_btn_style" >

                            <Button
                                android:id="@+id/register_button"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/orange_btn"
                                android:text="@string/register"
                                android:textSize="@dimen/standard_padding20" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>